ORG-2774: Oppdatert en del dependabot PR requests, fikset opp